test/variables/sungeun/refvar-compare-nil.good
refvar-compare-nil.chpl:1: error: reference 'rx' is not initialized
refvar-compare-nil.chpl:1: error: split initialization is not supported for globals
