test/variables/sungeun/refvar-compare-nil.chpl
ref rx: int;

writeln(rx==nil);

